# DeepResearchAgent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
examples/: gradio_app.py  simple_query.py  telegram_bot.py  webui_server.py
src/: graph.py  logging_config.py  runtime.py  server.py
src/agents/: researcher.py  supervisor.py  writer.py
src/mcp/: research_server.py
src/models/: llm.py  schemas.py  state.py
src/nodes/: clarification.py  context.py  evaluation.py  research.py
src/prompts/: clarification.py  context.py  evaluation.py  researcher.py  supervisor.py  writer.py
src/tools/: common.py  mcp_loader.py  registry.py  search.py
src/utils/: date.py  evidence.py  summarization.py
tests/: test_evidence_utils.py  test_tool_registry.py
