[project]
name = "deepresearchagent"
version = "0.1.0"
description = "A multi-agent deep research assistant powered by LangGraph and GPT-4o"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic-settings>=2.13.1",
    "python-telegram-bot>=22.6",
    "rich>=14.3.3",
    "tavily>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
