[project]
name = "deepresearchagent"
version = "0.1.0"
description = "A multi-agent deep research assistant powered by LangGraph and GPT-4o"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "gradio>=5.50.2",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pydantic-settings>=2.13.1",
    "python-telegram-bot>=22.6",
    "rich>=14.3.3",
    "tavily>=1.1.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
